# nuget-scanner

./: Cargo.toml  README.md  SECURITY_REVIEW.md  install.sh
.github/workflows/: release.yml
src/: fetchers.rs  helpers.rs  main.rs  osv.rs  schemas.rs  tui.rs
