[package]
name = "nuget-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
